[package]
name = "hoyer-chip-8"
version = "0.1.0"
authors = ["Nick Hoyer <9862931+Nickhoyer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
pixels = "0.3"
winit_input_helper = "0.10"
